--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ cryptography = "^42.0.5"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.23.6"
 
 [build-system]
 requires = ["poetry-core"]
