--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build package
       run: poetry build
     - name: Publish package
-      run: poetry publish --build --username $PYPI_USERNAME --password $PYPI_PASSWORD
+      run: poetry publish -vvv --build --username $PYPI_USERNAME --password $PYPI_PASSWORD
       env:
         PYPI_USERNAME: ${{secrets.PYPI_USERNAME}}
         PYPI_PASSWORD: ${{secrets.PYPI_PASSWORD}}
