--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,7 +35,7 @@ jobs:
       run: poetry build
     - name: Publish package
       env:
-        PYPI_PASSWORD: ${{secrets.PYPI_TOKEN}}
+        PYPI_TOKEN: ${{secrets.PYPI_TOKEN}}
       run: |
         poetry config pypi-token.pypi $PYPI_TOKEN
         poetry publish
