--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bpx-py"
-version = "1.1.4"
+version = "1.1.5"
 description = "Backpack API SDK tool"
 authors = ["sndmndss <yanfedorov120505@gmail.com>"]
 readme = "README.md"
@@ -29,6 +29,8 @@ python = "^3.8"
 requests = "^2.31.0"
 aiohttp = "^3.9.5"
 cryptography = "^42.0.5"
+pylint = "^3.2.2"
+pep8 = "^1.7.1"
 
 
 
