--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ pep8 = "^1.7.1"
 pytest = "^8.2.0"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.23.6"
+black = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
